--- a/topdonators.htm
+++ b/topdonators.htm
@@ -8,35 +8,52 @@
 
   <body>
 
+  <link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
+  
   <style>
   div{
-  position:absolute; width:200px; background-color:#8888ee; height:40px;
+  font-family:'Nunito', sans-serif;font-size:24px;font-style:normal;font-variant:normal;font-weight:bold;
   }
+  
+  .container{
+  position:absolute; box-shadow: 5px 5px 3px grey; width:400px; background-color:#8888ee; height:40px;
+  }
+  
   .left{
-  left:5px;
+  margin-left:15px;
   width: 45%;
+  height: 100%;
+  vertical-align: middle;
+  text-align:left;
   background-color:transparent;
   }
   
   .right{
-  right:5px;
+  right:15px;
   width: 45%;
+  vertical-align: middle;
   text-align: right;
+  vertical-align: middle;
   background-color:transparent;
   }
-  </style>
   
-  <div id="0" nick="none1" value="-1" style="top: 10px; "></div>
-  <div id="1" nick="none2" value="-2" style="top: 60px; "></div>
-  <div id="2" nick="none3" value="-3" style="top:110px; "></div>
-  <div id="3" nick="none4" value="-4" style="top:160px; "></div>
-  <div id="4" nick="none5" value="-5" style="top:210px; "></div>
-  <div id="5" nick="" style="top:260px; "></div>
-  <div id="6" nick="" style="top:310px; "></div>
-  <div id="7" nick="" style="top:360px; "></div>
-  <div id="8" nick="" style="top:410px; "></div>
-  <div id="9" nick="" style="top:460px; "></div>
-    
+  span {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+  }
+  </style>
+  <div style="width:400px;height:30px;text-align:center;vertical-align:middle;position:absolute;top:5px;"> <img src="http://plusquotes.com/images/quotes-img/hearts-9.jpg" height="30px"> Top-10 donators <img src="http://plusquotes.com/images/quotes-img/hearts-9.jpg" height="30px"></div>
+  <div class="container" id="0" nick="none1" value="-1" style="top: 50px; "></div>
+  <div class="container" id="1" nick="none2" value="-2" style="top:100px; "></div>
+  <div class="container" id="2" nick="none3" value="-3" style="top:150px; "></div>
+  <div class="container" id="3" nick="none4" value="-4" style="top:200px; "></div>
+  <div class="container" id="4" nick="none5" value="-5" style="top:250px; "></div>
+  <div class="container" id="5" nick="" style="top:300px; "></div>
+  <div class="container" id="6" nick="" style="top:350px; "></div>
+  <div class="container" id="7" nick="" style="top:400px; "></div>
+  <div class="container" id="8" nick="" style="top:450px; "></div>
+  <div class="container" id="9" nick="" style="top:500px; "></div>
   
     
 <script src="http://d3js.org/d3.v3.min.js"></script>
@@ -96,7 +113,7 @@
   for(var j=0;j<n*2;j++){
 	var who = $("#"+j).attr("nick");
 	$("#"+j).attr("value", map[who]);
-	$("#"+j).html("<div class='left'>"+who+"</div> <div class='right'>$"+map[who]+"</div>");
+	$("#"+j).html("<div class='left'><span>"+who+"</span></div> <div class='right'><span style='right:15px;'>$"+map[who]+"</span></div>");
   }
   
   var np = [0,1,2,3,4,5,6,7,8,9];
