--- a/unmodlist.htm
+++ b/unmodlist.htm
@@ -60,7 +60,7 @@ function cplottopickwinner() {
 <input type="button" value="GO!" onclick="cplottopickwinner(document.search)">
 <br>
 <b> Прощайте: </b>
-<table style="width:calc(100% - 450px)">
+<table style="width:calc(450px)">
 
     <tbody id="winners">
     </tbody>
