--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0024)http://localhost/random/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<title>Random voting twitch.tv/etozhemad!</title>
+<title>Random voting twitch.tv/etozhemad!!!</title>
 
 <style>
    td{
