--- a/unmodlist.htm
+++ b/unmodlist.htm
@@ -90,6 +90,10 @@ function cplottopickwinner() {
 <body>
 
 <input type="button" value="GO!" onclick="cplottopickwinner(document.search)">
+<div align="center" style="width:390px">
+<img src="http://www.studenteportfolio.qut.edu.au/get_in_and_go/graphics/GoButton.png">
+</div>
+	
 <br>
 <div align="center" style="width:390px"><b> Прощайте </b></div>
 <table style="width:calc(390px)">
