--- a/unmodlist.htm
+++ b/unmodlist.htm
@@ -89,9 +89,8 @@ function cplottopickwinner() {
 
 <body>
 
-<input type="button" value="GO!" onclick="cplottopickwinner(document.search)">
 <div align="center" style="width:390px">
-<img src="http://www.studenteportfolio.qut.edu.au/get_in_and_go/graphics/GoButton.png">
+<img src="http://www.studenteportfolio.qut.edu.au/get_in_and_go/graphics/GoButton.png" onclick="cplottopickwinner(document.search)">
 </div>
 	
 <br>
