--- a/unmodlist.htm
+++ b/unmodlist.htm
@@ -90,7 +90,7 @@ function cplottopickwinner() {
 <body>
 
 <div align="center" style="width:390px">
-<img src="http://www.studenteportfolio.qut.edu.au/get_in_and_go/graphics/GoButton.png" onclick="cplottopickwinner(document.search)">
+<img style="width:390px" src="http://www.studenteportfolio.qut.edu.au/get_in_and_go/graphics/GoButton.png" onclick="cplottopickwinner(document.search)">
 </div>
 	
 <br>
