--- a/unmodlist.htm
+++ b/unmodlist.htm
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <!-- saved from url=(0024)http://localhost/random/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<title>Random voting twitch.tv/etozhemad!</title>
-
+<title>Random unmodding twitch.tv/nimferna</title>
+<link href="https://fonts.googleapis.com/css?family=Marmelad" rel="stylesheet">
 <style>
+* {
+ font-size: 100%;
+ font-family: 'Marmelad', sans-serif;
+}	
+	
 table {
-	font-family:Arial, Helvetica, sans-serif;
 	color:#666;
 	font-size:16px;
 	text-shadow: 1px 1px 0px #fff;
