--- a/unmodlist.htm
+++ b/unmodlist.htm
@@ -2,11 +2,12 @@
 <!-- saved from url=(0024)http://localhost/random/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
 <title>Random unmodding twitch.tv/nimferna</title>
-<link href="https://fonts.googleapis.com/css?family=Marmelad" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	
 <style>
 * {
  font-size: 100%;
- font-family: 'Marmelad', sans-serif;
+ font-family: 'Ubuntu', sans-serif;
 }	
 	
 table {
