--- a/unmodlist.htm
+++ b/unmodlist.htm
@@ -7,10 +7,12 @@
 <style>
 * {
  font-size: 100%;
- font-family: 'Ubuntu', sans-serif;
+ font-family: Helvetica Neue,Helvetica,sans-serif;
 }	
 	
 table {
+	font-family: Helvetica Neue,Helvetica,sans-serif;
+	font-weight: 700;
 	color:#666;
 	font-size:16px;
 	text-shadow: 1px 1px 0px #fff;
