--- a/unmodlist.htm
+++ b/unmodlist.htm
@@ -7,15 +7,13 @@
 <style>
 * {
  font-size: 100%;
- font-family: Helvetica Neue,Helvetica,sans-serif;
+ font-family: Arial, sans-serif;
 }	
 	
 table {
 	font-family: Helvetica Neue,Helvetica,sans-serif;
 	font-weight: 700;
-	color:#666;
 	font-size:16px;
-	text-shadow: 1px 1px 0px #fff;
 	background:#eaebec;
 	border:#ccc 1px solid;
 
