--- a/supersimpletimer.htm
+++ b/supersimpletimer.htm
@@ -12,8 +12,7 @@
 
 <style>
 body{
-	text-align: center;
-	background: #00ECB9;
+  text-align: center;
   font-family: sans-serif;
   font-weight: 100;
 }
@@ -35,16 +34,14 @@ h1{
 }
 
 #clockdiv > div{
-	padding: 10px;
 	border-radius: 3px;
-	background: #00BF96;
+	background: #88eeee;
 	display: inline-block;
 }
 
 #clockdiv div > span{
-	padding: 15px;
 	border-radius: 3px;
-	background: #00816A;
+	background: #88eeee;
 	display: inline-block;
 }
 </style>
