--- a/supersimpletimer.htm
+++ b/supersimpletimer.htm
@@ -1,10 +1,10 @@
 <div id="clockdiv">
   <div>
     <span class="hours"></span>
-  </div>
+  </div>:
   <div>
     <span class="minutes"></span>
-  </div>
+  </div>:
   <div>
     <span class="seconds"></span>
   </div>
@@ -29,20 +29,20 @@ h1{
 	color: #fff;
 	display: inline-block;
 	font-weight: 100;
+	background: #88eeee;
 	text-align: center;
+	border-radius: 3px;
 	font-size: 30px;
 }
 
 #clockdiv > div{
 	padding: 3px;
 	border-radius: 3px;
-	background: #88eeee;
 	display: inline-block;
 }
 
 #clockdiv div > span{
 	border-radius: 3px;
-	background: #88eeee;
 	display: inline-block;
 }
 </style>
