--- a/supersimpletimer.htm
+++ b/supersimpletimer.htm
@@ -1,11 +1,9 @@
 <div id="clockdiv">
   <div>
     <span class="hours"></span>
-  </div>:
-  <div>
+  </div>:<div>
     <span class="minutes"></span>
-  </div>:
-  <div>
+  </div>:<div>
     <span class="seconds"></span>
   </div>
 </div>
