--- a/timerdigital.htm
+++ b/timerdigital.htm
@@ -1,7 +1,9 @@
-@font-face {
+<style>
+	@font-face {
     font-family: "digital";
     src: url("fonts/awesome-font.woff") format('woff');
 }
+</style>
 
 <div id="clockdiv">
   <div>
