--- a/timerdigital.htm
+++ b/timerdigital.htm
@@ -1,7 +1,7 @@
 <style>
 	@font-face {
     font-family: "digital";
-    src: url("https://github.com/webxl/CloudTimer/blob/master/static/font/digital-7-webfont.woff") format('woff');
+    src: url("fonts/digital-7-webfont.woff") format('woff');
 }
 </style>
 
