--- a/supersimpletimer.htm
+++ b/supersimpletimer.htm
@@ -30,6 +30,7 @@ h1{
 	text-align: center;
 	border-radius: 3px;
 	font-size: 30px;
+text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 #clockdiv > div{
