--- a/cool_timer/manage/gas-tryout.htm
+++ b/cool_timer/manage/gas-tryout.htm
@@ -12,7 +12,7 @@ function start() {
     'discoveryDocs': ['https://people.googleapis.com/$discovery/rest'],
     // clientId and scope are optional if auth is not required.
     'clientId': '268093223201-luo1ithiero1d9m9qh2s7rgs9cq3ne24.apps.googleusercontent.com',
-    //'scope': 'profile',
+    'scope': 'https://www.googleapis.com/auth/spreadsheets',
   });
 };
 // 1. Load the JavaScript client library.
