--- a/cool_timer/manage/gas-tryout.htm
+++ b/cool_timer/manage/gas-tryout.htm
@@ -14,6 +14,7 @@ function start() {
     'clientId': '268093223201-luo1ithiero1d9m9qh2s7rgs9cq3ne24.apps.googleusercontent.com',
     'scope': 'https://www.googleapis.com/auth/spreadsheets',
   });
+  console.log("DONE(not actually)");
 };
 // 1. Load the JavaScript client library.
 gapi.load('client', start);
