--- a/cool_timer/manage/gas-tryout.htm
+++ b/cool_timer/manage/gas-tryout.htm
@@ -12,7 +12,8 @@ function start() {
     'discoveryDocs': ['https://script.googleapis.com/$discovery/rest?version=v1'],
     // clientId and scope are optional if auth is not required.
     'clientId': '268093223201-luo1ithiero1d9m9qh2s7rgs9cq3ne24.apps.googleusercontent.com',
-    'scope': 'https://www.googleapis.com/auth/spreadsheets',
+//  'scope': 'https://www.googleapis.com/auth/spreadsheets',
+    'scope': 'https://apps-apis.google.com/a/feeds https://apps-apis.google.com/a/feeds/alias/ https://apps-apis.google.com/a/feeds/groups/ https://mail.google.com/ https://sites.google.com/feeds https://www.google.com/calendar/feeds https://www.google.com/m8/feeds https://www.googleapis.com/auth/admin.directory.group https://www.googleapis.com/auth/admin.directory.user https://www.googleapis.com/auth/documents https://www.googleapis.com/auth/documents.currentonly https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/dynamiccreatives https://www.googleapis.com/auth/forms https://www.googleapis.com/auth/forms.currentonly https://www.googleapis.com/auth/groups https://www.googleapis.com/auth/script.cpanel https://www.googleapis.com/auth/script.external_request https://www.googleapis.com/auth/script.scriptapp https://www.googleapis.com/auth/script.send_mail https://www.googleapis.com/auth/script.storage https://www.googleapis.com/auth/script.webapp.deploy https://www.googleapis.com/auth/spreadsheets https://www.googleapis.com/auth/spreadsheets.currentonly https://www.googleapis.com/auth/sqlservice https://www.googleapis.com/auth/userinfo.email',
   });
   console.log("DONE(not actually)");
 };
