--- a/znd/VidosikManagementSystem/index.htm
+++ b/znd/VidosikManagementSystem/index.htm
@@ -16,7 +16,19 @@ function unwrap(s){
 }
 
 function update(){
-$.get( url, function( data ) {
+
+$.ajax({
+  type: 'GET',
+  url: url,
+  contentType: 'text/plain',
+  xhrFields: {
+   withCredentials: false
+  },
+
+  headers: {
+  },
+
+}).done(function( data ) {
   var parts = data.split('"v":"');
   var cnt = Math.floor(parts.length/5);
   console.log(cnt);
@@ -49,6 +61,22 @@ setInterval(update, 5000);
 <tr><td width="20%">
 
 <div class="list-group" style="width:100%;height:100%;">
+  <a href="http://www.youtube.com/embed/Q5im0Ssyyus" class="list-group-item active" target="frame">
+    <h4 class="list-group-item-heading">Description1 by vasyan</h4>
+    <p class="list-group-item-text">Actual name1</p>
+  </a>
+  <a href="http://www.youtube.com/embed/Q5im0Ssyyus" class="list-group-item active" target="frame">
+    <h4 class="list-group-item-heading">Description2 by kolyan</h4>
+    <p class="list-group-item-text">Actual name2</p>
+  </a>
+  <a href="http://www.youtube.com/embed/Q5im0Ssyyus" class="list-group-item active" target="frame">
+    <h4 class="list-group-item-heading">Description3 by petyan</h4>
+    <p class="list-group-item-text">Actual name3</p>
+  </a>
+  <a href="http://www.youtube.com/embed/Q5im0Ssyyus" class="list-group-item active" target="frame">
+    <h4 class="list-group-item-heading">Description4 by vovan</h4>
+    <p class="list-group-item-text">Actual name4</p>
+  </a>
 </div>
 </td>
 <td width="80%">
