--- a/znd/VidosikManagementSystem/index.htm
+++ b/znd/VidosikManagementSystem/index.htm
@@ -8,7 +8,7 @@
 
 <script>
 
-var url = "https://docs.google.com/spreadsheets/d/1EX1FfhAM67p7cxnuakZjAztF1yP96z6btibJ61cEqrM/gviz/tq?range=Requests!A:E&callback=?";
+var url = "https://docs.google.com/spreadsheets/d/1EX1FfhAM67p7cxnuakZjAztF1yP96z6btibJ61cEqrM/gviz/tq?range=Requests!A:E";
 var lastupd = -1;
 
 function unwrap(s){
