--- a/znd/VidosikManagementSystem/index.htm
+++ b/znd/VidosikManagementSystem/index.htm
@@ -22,7 +22,7 @@ $.ajax({
   url: url,
   contentType: 'text/plain',
   xhrFields: {
-   withCredentials: false
+   withCredentials: true
   },
 
   headers: {
