--- a/znd/VidosikManagementSystem/index.htm
+++ b/znd/VidosikManagementSystem/index.htm
@@ -48,7 +48,8 @@ setInterval(update, 5000);
 <body>
 <table style="width:100%;height:98%;">
 <tr><td width="20%">
-
+<div class="list-group" style="width:100%;height:100%;">
+</div>
 </td>
 <td width="80%">
 <div style="width:100%;height:100%;"
