--- a/supersimpletimer.htm
+++ b/supersimpletimer.htm
@@ -47,7 +47,7 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 
 <script>
 function getTimeRemaining(endtime) {
-  var t = Date.parse(new Date()) - Date.parse(endtime) ;
+  var t = MAth.abs(Date.parse(new Date()) - Date.parse(endtime)) ;
   var seconds = Math.floor((t / 1000) % 60);
   var minutes = Math.floor((t / 1000 / 60) % 60);
   var hours = Math.floor((t / (1000 * 60 * 60)) % 24);
