--- a/supersimpletimer.htm
+++ b/supersimpletimer.htm
@@ -29,7 +29,7 @@ h1{
 	font-weight: 100;
 	text-align: center;
 	border-radius: 3px;
-	font-size: 30px;
+	font-size: 100px;
 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
@@ -47,7 +47,7 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 
 <script>
 function getTimeRemaining(endtime) {
-  var t = MAth.abs(Date.parse(new Date()) - Date.parse(endtime)) ;
+  var t = Math.abs(Date.parse(new Date()) - Date.parse(endtime)) ;
   var seconds = Math.floor((t / 1000) % 60);
   var minutes = Math.floor((t / 1000 / 60) % 60);
   var hours = Math.floor((t / (1000 * 60 * 60)) % 24);
@@ -74,7 +74,7 @@ function initializeClock(id, endtime) {
   }
 
   updateClock();
-  var timeinterval = setInterval(updateClock, 1000);
+  var timeinterval = setInterval(updateClock, 900);
 }
 
 var deadline = new Date(Date.parse(location.hash.substring(1)));
