--- a/supersimpletimer.htm
+++ b/supersimpletimer.htm
@@ -50,7 +50,7 @@ function getTimeRemaining(endtime) {
   var t = Math.abs(Date.parse(new Date()) - Date.parse(endtime)) ;
   var seconds = Math.floor((t / 1000) % 60);
   var minutes = Math.floor((t / 1000 / 60) % 60);
-  var hours = Math.floor((t / (1000 * 60 * 60)) % 24);
+  var hours = Math.floor((t / (1000 * 60 * 60)));
   return {
     'total': t,
     'hours': hours,
