--- a/znd/zndsubalertexample.htm
+++ b/znd/zndsubalertexample.htm
@@ -9,7 +9,7 @@
 <head>
 <script type="text/javascript" src="snowstorm.js"></script>
 <script type="text/javascript">
-snowStorm.snowCharacter = "<img src=\"https://media.tenor.co/images/606b6b72550a4169e40251717922e37c/tenor.gif\" style=\"max-width:100%;max-height:100%;\">";
+snowStorm.snowCharacter = "<img src=\"http://i2.kym-cdn.com/photos/images/original/000/968/807/1be.gif\" style=\"max-width:100%;max-height:100%;\">";
 snowStorm.snowColor = '#fff'; // blue-ish snow!?
 snowStorm.flakesMaxActive = 128;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = false; // let the snow flicker in and out of view
