--- a/znd/subalert/test.htm
+++ b/znd/subalert/test.htm
@@ -15,6 +15,7 @@ snowStorm.flakesMaxActive = 128;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = false; // let the snow flicker in and out of view
 snowStorm.vMaxY = 1;
 snowStorm.vMaxX = 0.2;
+snowStorm.flakeLeftOffset = 80;
 this.flakeWidth = 74;            // Max pixel width reserved for snow element
 this.flakeHeight = 100;
 </script>
