--- a/znd/subalert/alternative.htm
+++ b/znd/subalert/alternative.htm
@@ -18,7 +18,7 @@ function startEvent(text){
 function showTheFrog(countdown){
 if(countdown == 0) return;
 console.log(countdown+" frogs remaining");
-document.body.innerHTML += '<div style="position: absolute; transform: translate3d(0px, 0px, 0px); width: 74px; height: 100px; overflow: hidden; z-index: 0; display: block; opacity: 1; padding: 0px; margin: 0px; text-align: center; vertical-align: baseline; left: '+Math.random()*100+'%;"><img src="http://i2.kym-cdn.com/photos/images/original/000/968/807/1be.gif" style="max-width:100%;max-height:100%;"></div>'; 
+document.body.innerHTML += '<div style="position: absolute; -moz-transform: translateY(1200px); -ms-transform: translateY(1200px); -webkit-transform: translateY(1200px); -o-transform: translateY(1200px); transform: translateY(1200px); -webkit-transition-duration: 5s; transition-duration: 5s;  width: 74px; height: 100px; overflow: hidden; z-index: 0; display: block; opacity: 1; padding: 0px; margin: 0px; text-align: center; bottom:0; vertical-align: baseline; left: '+Math.random()*100+'%;"><img src="http://i2.kym-cdn.com/photos/images/original/000/968/807/1be.gif" style="max-width:100%;max-height:100%;"></div>'; 
 }
 
 function clearUp(){
