--- a/znd/subalert/alternative.htm
+++ b/znd/subalert/alternative.htm
@@ -8,18 +8,21 @@
 <meta http-equiv="pragma" content="no-cache" /><title>DHTML SnowStorm: Basic Example</title>
 <head>
 <script type="text/javascript">
+var countdown;
 function startEvent(text){
   showText(text);
-  setTimeout(showTheFrog, 50, 200);
+  countdown = 200;
+  setTimeout(showTheFrog(), 50);
   setTimeout(hideText(), 10000);
   setTimeout(clearUp(), 10000);
 }
 
 function showTheFrog(countdown){
 if(countdown == 0) return;
+countdown--;
 console.log(countdown+" frogs remaining");
 document.body.innerHTML += '<div style="position: absolute; -moz-transform: translateY(1200px); -ms-transform: translateY(1200px); -webkit-transform: translateY(1200px); -o-transform: translateY(1200px); transform: translateY(1200px); -webkit-transition-duration: 5s; transition-duration: 5s;  width: 74px; height: 100px; overflow: hidden; z-index: 0; display: block; opacity: 1; padding: 0px; margin: 0px; text-align: center; top:-120px; vertical-align: baseline; left: '+Math.random()*100+'%;"><img src="http://i2.kym-cdn.com/photos/images/original/000/968/807/1be.gif" style="max-width:100%;max-height:100%;"></div>'; 
-setTimeout(showTheFrog, 50, countdown - 1);
+setTimeout(showTheFrog(), 50);
 }
 
 function clearUp(){
