--- a/znd/fallingfrogs.htm
+++ b/znd/fallingfrogs.htm
@@ -28,7 +28,7 @@ if(countdown <= 0) return;
 countdown = countdown - 1;
 console.log(countdown+" frogs remaining");
 document.body.appendChild(htmlToElement('<div style="position: absolute; animation: godown 5s linear; width: 74px; height: 100px; overflow: hidden; z-index: '+countdown+'; display: block; opacity: 1; padding: 0px; margin: 0px; text-align: center; top:-120px; vertical-align: baseline; left: '+Math.random()*90+'%;"><img src="http://i2.kym-cdn.com/photos/images/original/000/968/807/1be.gif" style="max-width:100%;max-height:100%;"></div>')); 
-setTimeout(showTheFrog(), 50);
+setTimeout(showTheFrog, 50);
 }
 	
 document.addEventListener("DOMContentLoaded", showTheFrog);
