--- a/RoN/index.htm
+++ b/RoN/index.htm
@@ -1,2 +1,7 @@
 <h1>Скачайте эту срань и установите</h1>
-<iframe src="https://drive.google.com/embeddedfolderview?id=0B3R55IdrE0f_Q002LUt0UllNbjA#list" style="width:100%; height:200px; border:0;"></iframe>
+<style>
+    iframe {
+        overflow:hidden;
+    }
+</style>
+<iframe scrolling="no" src="https://drive.google.com/embeddedfolderview?id=0B3R55IdrE0f_Q002LUt0UllNbjA#list" style="width:100%; height:200px; border:0;"></iframe>
