--- a/RoN/index.htm
+++ b/RoN/index.htm
@@ -4,4 +4,4 @@
         overflow:hidden;
     }
 </style>
-<iframe scrolling="no" src="https://drive.google.com/embeddedfolderview?id=0B3R55IdrE0f_Q002LUt0UllNbjA#list" style="width:100%; height:200px; border:0;"></iframe>
+<iframe scrolling="no" src="https://drive.google.com/embeddedfolderview?id=0B3R55IdrE0f_Q002LUt0UllNbjA#list" style="width:400px; height:200px; border:0;"></iframe>
