--- a/RoN/index.htm
+++ b/RoN/index.htm
@@ -1,8 +1,15 @@
-<h1>Скачайте эту срань и установите</h1>
 <style>
-    iframe {
+iframe {
         overflow:hidden;
         margin-top:-100px;
     }
+    body{
+        width:500px;
+        text-align: center;
+    }
 </style>
+
+<body>
+<h1>Скачайте эту срань и установите</h1>
 <iframe scrolling="no" src="https://drive.google.com/embeddedfolderview?id=0B3R55IdrE0f_Q002LUt0UllNbjA#grid" style="width:100%; height:250px; border:0;"></iframe>
+</body>
