--- a/RoN/index.htm
+++ b/RoN/index.htm
@@ -4,6 +4,7 @@ iframe {
         margin-top:-100px;
     }
     body{
+        margin:    0 auto;
         width:500px;
         text-align: center;
     }
