--- a/RoN/index.htm
+++ b/RoN/index.htm
@@ -2,6 +2,9 @@
 iframe {
         overflow:hidden;
         margin-top:-100px;
+        width:100%; 
+        height:250px; 
+        border:0;
     }
     body{
         margin:    0 auto;
@@ -12,5 +15,6 @@ iframe {
 
 <body>
 <h1>Скачайте эту срань и установите</h1>
-<iframe scrolling="no" src="https://drive.google.com/embeddedfolderview?id=0B3R55IdrE0f_Q002LUt0UllNbjA#grid" style="width:100%; height:250px; border:0;"></iframe>
+<iframe scrolling="no" src="https://drive.google.com/embeddedfolderview?id=0B3R55IdrE0f_Q002LUt0UllNbjA#grid" ></iframe>
+<iframe scrolling="no" src="https://drive.google.com/file/d/0B3R55IdrE0f_RW9KVDVyX2J3SWc/view">
 </body>
