--- a/RoN/index.htm
+++ b/RoN/index.htm
@@ -15,6 +15,8 @@ iframe {
 
 <body>
 <h1>Скачайте эту срань и установите</h1>
-<iframe scrolling="no" src="https://drive.google.com/embeddedfolderview?id=0B3R55IdrE0f_Q002LUt0UllNbjA#grid" ></iframe>
-<iframe scrolling="no" src="https://drive.google.com/file/d/0B3R55IdrE0f_RW9KVDVyX2J3SWc/view">
+<a href="https://drive.google.com/uc?export=download&id=0B3R55IdrE0f_RW9KVDVyX2J3SWc" >Раз</a><br>
+<a href="https://drive.google.com/uc?export=download&id=0B3R55IdrE0f_UFg5emp0bFd1Uzg" >Два</a><br>
+<a href="https://drive.google.com/uc?export=download&id=0B3R55IdrE0f_VWNnSVFUVW5XaHc" >Три</a>
+        
 </body>
