--- a/RoN/index.htm
+++ b/RoN/index.htm
@@ -15,7 +15,8 @@ iframe {
 
 <body>
 <h1>Скачайте эту срань и установите</h1>
-        <a href="http://rutracker.org/forum/viewtopic.php?t=4765106"> Если вам норм рутрекер </a><br>
+<a href="http://rutracker.org/forum/viewtopic.php?t=4765106"> Ссылка на торрент, если вам норм рутрекер </a><br>
+А тут какие-то прямые ссылки:<br>
 <a href="https://drive.google.com/uc?export=download&id=0B3R55IdrE0f_RW9KVDVyX2J3SWc" >Раз</a><br>
 <a href="https://drive.google.com/uc?export=download&id=0B3R55IdrE0f_UFg5emp0bFd1Uzg" >Два</a><br>
 <a href="https://drive.google.com/uc?export=download&id=0B3R55IdrE0f_VWNnSVFUVW5XaHc" >Три</a>
