--- a/abuseprime/upgraded.htm
+++ b/abuseprime/upgraded.htm
@@ -54,5 +54,5 @@ to:
 https://www.amazon.de/gp/prime/pipeline/landing?ie=UTF8&ref_=nav_prime_try_btn
 </pre>
 
-<div><a href="http://www.softether-download.com/en.aspx?product=softether"> Free VPN </a></div>
+<div><a href="http://www.vpngate.net/en/download.aspx"> Free VPN </a></div>
 <div><a href="https://www.vpnreactor.com/">Быстрый VPN, но надо оформить триал</a></div>
