--- a/auction/index.htm
+++ b/auction/index.htm
@@ -22,11 +22,11 @@ document.addEventListener('DOMContentLoaded', fillFields(), false);
 <div><button class="btn" onclick="window.open("https://script.google.com/macros/s/AKfycbyGbbntxe3BwWrzRFSB19f0EVdzxokbuRol8MBHIHhPUNbgGtg/exec",'window','toolbar=no, menubar=no, resizable=yes')">Панель управления</button></div>
 
 <div>
-<div><input class="form-control input-md" id="widget1address"></input><div>
+<div><input class="form-control input-md" id="widget1address"><div>
 <iframe></iframe>
 </div>
 
 <div>
-<div><input class="form-control input-md" id="widget1address"></input><div>
+<div><input class="form-control input-md" id="widget1address"><div>
 <iframe></iframe>
 </div>
