--- a/auction/index.htm
+++ b/auction/index.htm
@@ -9,6 +9,17 @@ button{
   background-color:#88f;
   margin-top:3px;
 }
+
+input{
+  width:360px;
+  margin-top:3px;
+}
+
+iframe{
+  width:360px;
+  margin-top:3px;
+}
+
 </style>
 
 <script>
