--- a/auction/index.htm
+++ b/auction/index.htm
@@ -30,7 +30,7 @@ function fillFields(){
 
 document.addEventListener('DOMContentLoaded', fillFields(), false);
 </script>
-<div><button class="btn" onclick="window.open('https://script.google.com/macros/s/AKfycbyGbbntxe3BwWrzRFSB19f0EVdzxokbuRol8MBHIHhPUNbgGtg/exec','window','toolbar=no, menubar=no, resizable=yes')">Панель управления</button></div>
+<div><button class="btn" onclick="window.open('https://script.google.com/macros/s/AKfycbyGbbntxe3BwWrzRFSB19f0EVdzxokbuRol8MBHIHhPUNbgGtg/exec','window','toolbar=no, menubar=no, resizable=yes, location=no, height=800, width=362')">Панель управления</button></div>
 
 <div>
 <div><input class="form-control input-md" id="widget1address"><div>
