--- a/auction/index.htm
+++ b/auction/index.htm
@@ -33,11 +33,11 @@ document.addEventListener('DOMContentLoaded', fillFields(), false);
 <div><button class="btn" onclick="window.open('https://script.google.com/macros/s/AKfycbyGbbntxe3BwWrzRFSB19f0EVdzxokbuRol8MBHIHhPUNbgGtg/exec','window','toolbar=no, menubar=no, resizable=yes, location=no, height=800, width=362')">Панель управления</button></div>
 
 <div>
-<div><input class="form-control input-md" id="widget1address"><div>
+<div><input class="form-control input-md" id="widget1address" readonly="readonly"><div>
 <iframe></iframe>
 </div>
 
 <div>
-<div><input class="form-control input-md" id="widget1address"><div>
+<div><input class="form-control input-md" id="widget2address" readonly="readonly"><div>
 <iframe></iframe>
 </div>
